Fixed some registration related spacing
 - Button's weren't full width
 - Signout message wasn't in a content container

--- a/app/css/Register.css
+++ b/app/css/Register.css
@@ -31,12 +31,14 @@
   composes: _button;
   padding: 12px;
   margin-bottom: 12px;
+  width: 100%;
 }
 
 .sign-in {
   composes: _button;
   padding: 12px;
   margin-bottom: 12px;
+  width: 100%;
 }
 
 .switch {
